--- a/src/main/webapp/app/entities/custom-user/custom-user-detail.html
+++ b/src/main/webapp/app/entities/custom-user/custom-user-detail.html
@@ -51,6 +51,10 @@
         <dd>
             <span>{{vm.customUser.viewCmde}}</span>
         </dd>
+        <dt><span data-translate="gestCApp.customUser.passwordApi">Password Api</span></dt>
+        <dd>
+            <span>{{vm.customUser.passwordApi}}</span>
+        </dd>
         <dt><span data-translate="gestCApp.customUser.user">User</span></dt>
         <dd>
             {{vm.customUser.user.login}}
