--- a/src/main/webapp/app/entities/custom-user/custom-users.html
+++ b/src/main/webapp/app/entities/custom-user/custom-users.html
@@ -47,6 +47,7 @@
                     <th jh-sort-by="telephone"><span data-translate="gestCApp.customUser.telephone">Telephone</span> <span class="glyphicon glyphicon-sort"></span></th>
                     <th jh-sort-by="viewVente"><span data-translate="gestCApp.customUser.viewVente">View Vente</span> <span class="glyphicon glyphicon-sort"></span></th>
                     <th jh-sort-by="viewCmde"><span data-translate="gestCApp.customUser.viewCmde">View Cmde</span> <span class="glyphicon glyphicon-sort"></span></th>
+                    <th jh-sort-by="passwordApi"><span data-translate="gestCApp.customUser.passwordApi">Password Api</span> <span class="glyphicon glyphicon-sort"></span></th>
                     <th jh-sort-by="user.login"><span data-translate="gestCApp.customUser.user">User</span> <span class="glyphicon glyphicon-sort"></span></th>
                     <th></th>
                 </tr>
@@ -68,6 +69,7 @@
                     <td>{{customUser.telephone}}</td>
                     <td>{{customUser.viewVente}}</td>
                     <td>{{customUser.viewCmde}}</td>
+                    <td>{{customUser.passwordApi}}</td>
                     <td>
                         {{customUser.user.login}}
                     </td>
